# Senial_SOLID_IS

./: .gitignore  CHANGELOG_v6.0.0.md  LICENSE  README.md  lanzador.py  requirements.txt  setup.py
adquisicion_senial/: README.md  __init__.py  adquisidor.py  factory_adquisidor.py  setup.py
configurador/: README.md  __init__.py  cargador_config.py  configurador.py  setup.py
docs/: ANTI-PATRONES VS SOLID - ANÁLISIS COMPARATIVO.md  APLICACION DIP CONFIGURACION EXTERNA.md  CARGADOR CONFIG - GESTION DE CONFIGURACION EXTERNA.md  CORRECCION ISP CON INTERFACES SEGREGADAS.md  FACTORIES ESPECIALIZADOS - DELEGACION Y SRP.md  IMPLEMENTACION DE OCP CON ABSTRACCIONES.md  IMPLEMETACION DE SRP EN PAQUETES.md  INCORPORACION DEL CONFIGURADOR CON FACTORY PATTERN.md  PATRON REPOSITORY EN PERSISTENCIA.md  PLAN_PAQUETIZACION_PASO_A_PASO.md  SOLUCION LSP CON ABSTRACCIONES.md  VIOLACIONES DE LSP EN TIPOS DE SEÑAL.md
dominio_senial/: README.md  __init__.py  senial.py  setup.py
lanzador/: README.md  __init__.py  lanzador.py  senial.txt  setup.py
packaging/: GITHUB_RELEASE_GUIDE.md  RELEASE_NOTES.md
packaging/metapackage/: README.md  pyproject.toml  setup.py
packaging/metapackage/senial_solid/: __init__.py
persistidor_senial/: README.md  __init__.py  contexto.py  factory_contexto.py  mapeador.py  persistidor.py  repositorio.py  setup.py
presentacion_senial/: README.md  __init__.py  setup.py  visualizador.py
procesamiento_senial/: README.md  __init__.py  factory_procesador.py  procesador.py  setup.py
senial_solid/: __init__.py  adquisidor.py  lector_senial.py  procesador.py  (+2 more)
(+14 files in other folders)
